# vc-perturb-eval

./: .gitignore  CLAUDE.md  LICENSE  README.md  _architecture.html  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: norman19.yaml
docs/: benchmark_frameworks_comparison.md  benchmark_frameworks_comparison_en.md  tmp.md
docs/superpowers/plans/: 2026-04-07-perteval-v1.md
docs/superpowers/specs/: 2026-04-07-perteval-design.md
notebooks/: quickstart.ipynb
src/perteval/: __init__.py  _registry.py
src/perteval/bench/: __init__.py  compare.py  evaluator.py  result.py  runner.py  task_manager.py
src/perteval/cli/: main.py
src/perteval/data/: __init__.py  splitter.py  types.py
src/perteval/data/accessors/: base.py  local.py
src/perteval/metrics/: __init__.py  base.py  registry.py
src/perteval/metrics/functional/: de.py  distribution.py  expression.py
src/perteval/models/: __init__.py  base.py  registry.py
src/perteval/models/baselines/: mean_control.py
tests/: conftest.py
tests/integration/: test_pipeline.py
tests/unit/: test_registry.py
tests/unit/test_bench/: test_compare.py  test_evaluator.py  test_result.py  test_runner.py  test_task_manager.py
tests/unit/test_data/: test_local_accessor.py  test_splitter.py  test_types.py
tests/unit/test_metrics/: test_de.py  test_distribution.py  test_expression.py  test_metric_registry.py
tests/unit/test_models/: test_mean_control.py
